--- a/blog_cathy.html
+++ b/blog_cathy.html
@@ -73,15 +73,11 @@
         <nav id="navbar" class="nav-menu navbar">
           <ul>
             <li>
-              <a href="#hero" class="nav-link scrollto active"
+              <a href="index.html" class="nav-link scrollto active"
                 ><i class="bx bx-home"></i> <span>Home</span></a
               >
             </li>
-            <li>
-              <a href="#about" class="nav-link scrollto"
-                ><i class="bx bx-user"></i> <span>About</span></a
-              >
-            </li>
+
             <!-- blog section dropdown -->
             <div class="dropdown show">
               <a
@@ -96,26 +92,36 @@
                 <i class="bx bx-user"></i> <span>Blog content</span>
               </a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a style="color: black;" class="dropdown-item" href="blog_davis.html">Leku Davis</a>
-                <div  style="color: black;"class="dropdown-divider"></div>
-                <a style="color: black;" class="dropdown-item" href="blog_cathy.html">Nakyanzi Catherine</a>
-                <div  style="color: black;"class="dropdown-divider"></div>
-                <a style="color: black;" class="dropdown-item" href="blog_yasmin.html">Yasmin Hassan</a>
-                <div  style="color: black;"class="dropdown-divider"></div>
-                <a style="color: black;" class="dropdown-item" href="blog_arnold.html">Rutanana Arnold</a>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_davis.html"
+                  >Leku Davis</a
+                >
+                <div style="color: black" class="dropdown-divider"></div>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_cathy.html"
+                  >Nakyanzi Catherine</a
+                >
+                <div style="color: black" class="dropdown-divider"></div>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_yasmin.html"
+                  >Yasmin Hassan</a
+                >
+                <div style="color: black" class="dropdown-divider"></div>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_arnold.html"
+                  >Rutanana Arnold</a
+                >
               </div>
             </div>
             <!-- end of dropdown -->
-            <li>
-              <a href="#progress" class="nav-link scrollto"
-                ><i class="bx bx-file-blank"></i> <span>Progress</span></a
-              >
-            </li>
-            <li>
-              <a href="#portfolio" class="nav-link scrollto"
-                ><i class="bx bx-book-content"></i> <span>Field</span></a
-              >
-            </li>
           </ul>
         </nav>
         <!-- .nav-menu -->
@@ -124,30 +130,16 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
-    <section
-      id="hero"
-      class="d-flex flex-column justify-content-center align-items-center"
-    >
-      <div class="hero-container" data-aos="fade-in">
-        <h1>BSE23-23</h1>
-        <p>
-          <span
-            class="typed"
-            data-typed-items="Water Theft and Leakage Detection System."
-          ></span>
-        </p>
-      </div>
-    </section>
     <!-- End Hero -->
     <main id="main">
       <!-- ======= Breadcrumbs ======= -->
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <h2>Portfoio Details</h2>
+            <h2>Blog Details</h2>
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li>Portfoio Details</li>
+              <li>Blog Details</li>
             </ol>
           </div>
         </div>
@@ -158,57 +150,26 @@
       <section id="portfolio-details" class="portfolio-details">
         <div class="container">
           <div class="row gy-4">
-            <div class="col-lg-8">
-              <div class="portfolio-details-slider swiper">
-                <div class="swiper-wrapper align-items-center">
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-1.jpg"
-                      alt=""
-                    />
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-2.jpg"
-                      alt=""
-                    />
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-3.jpg"
-                      alt=""
-                    />
-                  </div>
-                </div>
-                <div class="swiper-pagination"></div>
-              </div>
-            </div>
-
-            <div class="col-lg-4">
+            <div class="col-lg-12">
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                  <li><strong>Category</strong>: Web design</li>
+                  <li><strong>Team Member</strong>: Cathy</li>
                   <li><strong>Client</strong>: ASU Company</li>
                   <li><strong>Project date</strong>: 01 March, 2020</li>
                   <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
                   </li>
+                  <li>
+                    Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
+                    itaque inventore commodi labore quia quia. Exercitationem
+                    repudiandae officiis neque suscipit non officia eaque itaque
+                    enim. Voluptatem officia accusantium nesciunt est omnis
+                    tempora consectetur dignissimos. Sequi nulla at esse enim cum
+                    deserunt eius.
+                  </li>
                 </ul>
-              </div>
-              <div class="portfolio-description">
-                <h2>This is an example of portfolio detail</h2>
-                <p>
-                  Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                  itaque inventore commodi labore quia quia. Exercitationem
-                  repudiandae officiis neque suscipit non officia eaque itaque
-                  enim. Voluptatem officia accusantium nesciunt est omnis
-                  tempora consectetur dignissimos. Sequi nulla at esse enim cum
-                  deserunt eius.
-                </p>
               </div>
             </div>
           </div>
