added individual blog content

--- a/blog_arnold.html
+++ b/blog_arnold.html
@@ -155,21 +155,51 @@
                 <h3>Project information</h3>
                 <ul>
                   <li><strong>Team Member</strong>: RUTANANA ARNOLD</li>
-                  <li><strong>Client</strong>: ASU Company</li>
-                  <li><strong>Project date</strong>: 01 March, 2020</li>
-                  <li>
+                  <li><strong>Team Name</strong>: BSE23-23</li>
+                  <li><strong>Project Duration</strong>: 2022 - 2023</li>
+                  <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
-                  </li>
+                  </li> -->
                   <li>
-                    Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                    itaque inventore commodi labore quia quia. Exercitationem
-                    repudiandae officiis neque suscipit non officia eaque itaque
-                    enim. Voluptatem officia accusantium nesciunt est omnis
-                    tempora consectetur dignissimos. Sequi nulla at esse enim
-                    cum deserunt eius.
-                  </li>
                 </ul>
+                <p style="text-align: center">
+                  <strong>Contributions to the project</strong>
+                </p>
+                <ol>
+                  Engaged in the data collection process together with the
+                  team.
+                </ol>
+                <ol>
+                  Researched on the relevance of our project by doing some literature review.
+                </ol>
+                <ol>
+                  Assisted the team in coming up with a group blog post site.
+                </ol>
+                <p style="text-align: center">
+                  <strong>Literature review towards our project implementation</strong>
+                </p>
+                <p>
+                  <strong>1.  Water Distribution process</strong>    
+                </p>
+                <p> Link: <a href="https://www.finance.go.ug/sites/default/files/Publications/BMAU%20Briefing%20Paper%206-16-%20Piped%20Water%20Supply%20in%20Uganda.%20How%20can%20%20it%20be%20affordable%20for%20all.pdf">water supply in uganda</a></p>
+                <p>
+                  <strong> Findings from the article.</strong>           
+                </p>
+                <p>
+                  A piped water supply system or scheme is an array of pipes joined together to transport portable water from a source to the consumer service point. The various components of a piped water scheme include the source (river, lake, spring, and production boreholes), transmission and distribution mains, reservoir tanks, Break Pressure Tanks (BPTs) where the pressure ratings are high, a water treatment plant, and the service points (taps). When the source is at a higher altitude than the supply area, the water is transmitted by gravity without any power requirements. This type of system is referred to as a Gravity Flow Scheme (GFS). A combined system is where the water is transmitted by pumping and gravity flow. The sources of power include grid, solar, generator, and windmills.
+                </p>
+                <p>
+                  <strong>2.  Water Theft and Losses</strong>    
+                </p>
+                <p> Link: <a href="https://www.tetratech.com/en/blog/leveraging-partnerships-for-water-security-reducing-non-revenue-water-in-uganda#:~:text=The%20causes%20of%20water%20loss,of%20bills%20and%20illegal%20connections.">Water-security-reducing-non-revenue-water-in-uganda</a></p>
+                <p>
+                  <strong> Findings from the article.</strong>           
+                </p>
+                <p>
+                  The causes of water loss include leakages and broken metering, and poor management of water maintenance services, such as nonpayment of bills and illegal connections. Water lost to inefficient distribution meant less water available to support human health and well-being, businesses, and industry and less funding for Uganda’s National Water and Sewerage Corporation (NWSC) to provide additional services.
+                </p>
+              </li>
               </div>
             </div>
           </div>
