--- a/blog_cathy.html
+++ b/blog_cathy.html
@@ -155,8 +155,9 @@
                 <h3>Project information</h3>
                 <ul>
                   <li><strong>Team Member</strong>: Cathy</li>
-                  <li><strong>Client</strong>: ASU Company</li>
-                  <li><strong>Project date</strong>: 01 March, 2020</li>
+                  <li><strong>Team Name</strong>: BSE23-23</li>
+                  <li><strong>Project Duration</strong>: 2022 - 2023</li>
+                  >
                   <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -166,8 +167,8 @@
                     itaque inventore commodi labore quia quia. Exercitationem
                     repudiandae officiis neque suscipit non officia eaque itaque
                     enim. Voluptatem officia accusantium nesciunt est omnis
-                    tempora consectetur dignissimos. Sequi nulla at esse enim cum
-                    deserunt eius.
+                    tempora consectetur dignissimos. Sequi nulla at esse enim
+                    cum deserunt eius.
                   </li>
                 </ul>
               </div>
