--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -77,20 +82,53 @@
                 ><i class="bx bx-user"></i> <span>About</span></a
               >
             </li>
+            <li>
+              <a href="#overview" class="nav-link scrollto"
+                ><i class="bx bx-user"></i> <span>Project Overview</span></a
+              >
+            </li>
             <!-- blog section dropdown -->
             <div class="dropdown show">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a
+                class="btn btn-secondary dropdown-toggle"
+                href="#"
+                role="button"
+                id="dropdownMenuLink"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
                 <i class="bx bx-user"></i> <span>Blog content</span>
               </a>
-            
+
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a style="color: black;" class="dropdown-item" href="blog_davis.html">Leku Davis</a>
-                <div  style="color: black;"class="dropdown-divider"></div>
-                <a style="color: black;" class="dropdown-item" href="blog_cathy.html">Nakyanzi Catherine</a>
-                <div  style="color: black;"class="dropdown-divider"></div>
-                <a style="color: black;" class="dropdown-item" href="blog_yasmin.html">Yasmin Hassan</a>
-                <div  style="color: black;"class="dropdown-divider"></div>
-                <a style="color: black;" class="dropdown-item" href="blog_arnold.html">Rutanana Arnold</a>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_davis.html"
+                  >Leku Davis</a
+                >
+                <div style="color: black" class="dropdown-divider"></div>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_cathy.html"
+                  >Nakyanzi Catherine</a
+                >
+                <div style="color: black" class="dropdown-divider"></div>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_yasmin.html"
+                  >Yasmin Hassan</a
+                >
+                <div style="color: black" class="dropdown-divider"></div>
+                <a
+                  style="color: black"
+                  class="dropdown-item"
+                  href="blog_arnold.html"
+                  >Rutanana Arnold</a
+                >
               </div>
             </div>
             <!-- end of dropdown -->
@@ -140,6 +178,37 @@
               distribution of water. We are looking at designing a system that
               automates the process, from the anolog systems to real time
               systems.
+            </p>
+          </div>
+
+          <div class="section-title">
+            <h2>Project Overview</h2>
+            <p>
+              Water theft and leakages are serious problems that many
+              communities worldwide, including the National Water and Sewerage
+              Corporation (NWSC), are grappling with. These challenges not only
+              lead to water scarcity but also contribute to environmental
+              degradation. To address this problem, Group 23-23 embarked on a
+              project focused on using technology to tackle water theft and
+              leakages in NWSC's water distribution network. The project
+              involved a range of activities, including research proposal
+              development, data collection, SRS, and development. Group 23-23
+              relied on several data collection methods, including conducting
+              interviews and administering questionnaires to technicians,
+              managers, and engineers at different branches of NWSC. The team
+              also conducted a literature review to gain a deeper understanding
+              of the challenges facing the organization and the factors
+              contributing to water theft and leakages. With the data collected
+              and analyzed, Group 23-23 was ready to move to the development
+              phase. The team used the SRS to outline the project's requirements
+              and ensure that the software tool met the outlined specifications.
+              The coding and testing phase followed, ensuring that the software
+              tool was functioning correctly before deployment. Through the
+              development of this software tool, Group 23-23 aims to reduce
+              water theft and leakages, thereby promoting sustainable water
+              management practices in NWSC. As the team continues to explore
+              innovative solutions to this challenge, they are determined to
+              ensure that access to clean and safe water is guaranteed for all.
             </p>
           </div>
           <!-- ======= Testimonials Section ======= -->
@@ -548,7 +617,6 @@
         </div>
       </section>
       <!-- End Portfolio Section -->
-
     </main>
     <!-- End #main -->
 
@@ -589,11 +657,22 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
 
-    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
