--- a/blog_yasmin.html
+++ b/blog_yasmin.html
@@ -154,20 +154,53 @@
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                    <li><strong>Team Member</strong>: Yasmin</li>
-                  <li><strong>Client</strong>: ASU Company</li>
-                  <li><strong>Project date</strong>: 01 March, 2020</li>
-                  <li>
+                  <li><strong>Team Member</strong>: YASMIN HASSAN</li>
+                  <li><strong>Team Name</strong>:   BSE23-23</li>
+                  <li><strong>Project Duration</strong>: 2022 - 2023</li>
+                  <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
-                  </li>
+                  </li> -->
                   <li>
-                    Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                    itaque inventore commodi labore quia quia. Exercitationem
-                    repudiandae officiis neque suscipit non officia eaque itaque
-                    enim. Voluptatem officia accusantium nesciunt est omnis
-                    tempora consectetur dignissimos. Sequi nulla at esse enim
-                    cum deserunt eius.
+                    As someone who has always been passionate about
+                    environmental issues, I was thrilled to have the opportunity
+                    to work on the water theft and leak detection project with
+                    Group 23-23. From the very beginning, I was impressed with
+                    the team's commitment to finding innovative solutions to the
+                    challenges facing the local community and its water
+                    distribution network. I was excited to contribute my skills
+                    and knowledge to the project and to learn from the
+                    experienced professionals at NWSC. During the course of the
+                    project, I was tasked with conducting interviews with
+                    members of the local community to gain a better
+                    understanding of their perspectives on water theft and
+                    leakage. This was a challenging but incredibly rewarding
+                    experience. I had the opportunity to engage with people from
+                    diverse backgrounds and to hear their stories and concerns
+                    about water scarcity and access. It was a humbling
+                    experience, and it reminded me of the importance of
+                    centering community voices in any project aimed at
+                    addressing environmental issues. Working with the team to
+                    analyze the data we collected was also a great learning
+                    experience. I was able to use my skills in data analysis to
+                    help identify patterns and trends in the data, and to
+                    develop recommendations for how NWSC could improve its water
+                    management practices. It was satisfying to see our hard work
+                    come to fruition in the form of actionable insights and
+                    recommendations. Of course, the project was not without its
+                    challenges. The tight deadline and limited resources meant
+                    that we had to be creative and efficient in our approach. We
+                    had to work collaboratively and communicate effectively to
+                    ensure that we were all on the same page and that we were
+                    making the most of our time and resources. Despite these
+                    challenges, I am proud of what we were able to accomplish as
+                    a team. We were able to develop a comprehensive report that
+                    provided valuable insights into the water theft and leakages
+                    in the community, and that made actionable recommendations
+                    for how NWSC could improve its water management practices. I
+                    am grateful for the opportunity to have worked on this
+                    project and to have contributed to the important work of
+                    addressing environmental challenges in our community.
                   </li>
                 </ul>
               </div>
