added cathy's blog content

--- a/blog_davis.html
+++ b/blog_davis.html
@@ -157,56 +157,77 @@
                   <li><strong>Team Member</strong>: LEKU DAVIS</li>
                   <li><strong>Team Name</strong>: BSE23-23</li>
                   <li><strong>Project Duration</strong>: 2022 - 2023</li>
-                  <!-- <li>
-                    <strong>Project URL</strong>:
-                    <a href="#">www.example.com</a>
-                  </li> -->
-                  <li>
-                    Throughout our water theft and leak detection project with
-                    Group 23-23, I had the honor of conducting interviews with
-                    some of the most dedicated and experienced professionals at
-                    NWSC. As we walked into the NWSC offices, I felt a rush of
-                    excitement and anticipation about what I was going to learn
-                    from these experts and the insights they would offer about
-                    the challenges facing the organization and its water
-                    distribution network. Among the many interviews, one stood
-                    out as a truly memorable experience. It was with a
-                    technician who had been working with NWSC for over a decade,
-                    and his passion for his work was evident from the warm smile
-                    he greeted us with. As we delved into the discussion on
-                    water theft and leakages, he shared some moving stories
-                    about the negative impact of water scarcity on the local
-                    community. His urgency and conviction about addressing these
-                    challenges left me inspired and energized. I was impressed
-                    by the technician's technical expertise and his deep
-                    understanding of water distribution. He had been involved in
-                    various projects aimed at improving the network's efficiency
-                    and effectiveness. His passion for finding solutions to the
-                    organization's challenges was infectious, and I left the
-                    interview feeling motivated to tackle even the most complex
-                    problems. Despite the incredible learning opportunities, the
-                    project was not without its challenges. For me, analyzing
-                    the data we collected was daunting since I had to learn R
-                    programming from scratch. I spent long hours researching and
-                    practicing to master the language. Additionally, working on
-                    an embedded project was a new experience, and I had to learn
-                    on the job. Thankfully, my team members and supervisors
-                    provided excellent guidance and support, enabling me to make
-                    meaningful contributions to the project. We also encountered
-                    challenges during the literature review process, as it was
-                    difficult to find similar literature to inform our research.
-                    However, we persisted and identified relevant literature to
-                    guide our analysis and inform our findings. Overall, the
-                    project was an excellent opportunity to learn, grow, and
-                    contribute to a crucial issue affecting our community. It
-                    was a challenging yet rewarding experience, and I am proud
-                    of the work we accomplished as a team. I am eager to see the
-                    impact the project will have on water management practices
-                    and the community, and I am grateful for the knowledge and
-                    skills I gained from this project. Stay tuned for more
-                    updates as we move into the development of our solution.
-                  </li>
                 </ul>
+
+                <p style="text-align: center">
+                  <strong>Contributions to the project</strong>
+                </p>
+                <ol>
+                  Assisted the team in working on the initial draft of the
+                  concept paper.
+                </ol>
+                <ol>
+                  Data visualization
+                </ol>
+                <ol>
+                  Assisted the team in coming up with the SRS document for our
+                  project.
+                </ol>
+                <ol>
+                  Engaged in the data collection process together with the team.
+                </ol>
+                <ol>
+                  Researched on the relevance of our project by doing some
+                  literature review.
+                </ol>
+                <ol>
+                  Assisted the team in coming up with a group blog post site.
+                </ol>
+                <p>
+                  Throughout our water theft and leak detection project with
+                  Group 23-23, I had the honor of conducting interviews with
+                  some of the most dedicated and experienced professionals at
+                  NWSC. As we walked into the NWSC offices, I felt a rush of
+                  excitement and anticipation about what I was going to learn
+                  from these experts and the insights they would offer about the
+                  challenges facing the organization and its water distribution
+                  network. Among the many interviews, one stood out as a truly
+                  memorable experience. It was with a technician who had been
+                  working with NWSC for over a decade, and his passion for his
+                  work was evident from the warm smile he greeted us with. As we
+                  delved into the discussion on water theft and leakages, he
+                  shared some moving stories about the negative impact of water
+                  scarcity on the local community. His urgency and conviction
+                  about addressing these challenges left me inspired and
+                  energized. I was impressed by the technician's technical
+                  expertise and his deep understanding of water distribution. He
+                  had been involved in various projects aimed at improving the
+                  network's efficiency and effectiveness. His passion for
+                  finding solutions to the organization's challenges was
+                  infectious, and I left the interview feeling motivated to
+                  tackle even the most complex problems. Despite the incredible
+                  learning opportunities, the project was not without its
+                  challenges. For me, analyzing the data we collected was
+                  daunting since I had to learn R programming from scratch. I
+                  spent long hours researching and practicing to master the
+                  language. Additionally, working on an embedded project was a
+                  new experience, and I had to learn on the job. Thankfully, my
+                  team members and supervisors provided excellent guidance and
+                  support, enabling me to make meaningful contributions to the
+                  project. We also encountered challenges during the literature
+                  review process, as it was difficult to find similar literature
+                  to inform our research. However, we persisted and identified
+                  relevant literature to guide our analysis and inform our
+                  findings. Overall, the project was an excellent opportunity to
+                  learn, grow, and contribute to a crucial issue affecting our
+                  community. It was a challenging yet rewarding experience, and
+                  I am proud of the work we accomplished as a team. I am eager
+                  to see the impact the project will have on water management
+                  practices and the community, and I am grateful for the
+                  knowledge and skills I gained from this project. Stay tuned
+                  for more updates as we move into the development of our
+                  solution.
+                </p>
               </div>
             </div>
           </div>
