--- a/blog_arnold.html
+++ b/blog_arnold.html
@@ -176,6 +176,12 @@
                 <ol>
                   Assisted the team in coming up with a group blog post site.
                 </ol>
+                <ol>
+                  Assisted the team in coming up with the SRS document for our project.
+                </ol>
+                <ol>
+                  Data visualization
+                </ol>
                 <p style="text-align: center">
                   <strong>Literature review towards our project implementation</strong>
                 </p>
