--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                <i class="bx bx-user"></i> <span>Blog content</span>
+                <i class="bx bx-user"></i> <span>Contributions</span>
               </a>
 
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
