--- a/blog_arnold.html
+++ b/blog_arnold.html
@@ -89,7 +89,7 @@
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                <i class="bx bx-user"></i> <span>Blog content</span>
+                <i class="bx bx-user"></i> <span>Contributions</span>
               </a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a
@@ -136,10 +136,10 @@
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <h2>Blog Details</h2>
+            <h2>Contribution</h2>
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li>Blog Details</li>
+              <li>Contribution</li>
             </ol>
           </div>
         </div>
@@ -157,30 +157,26 @@
                   <li><strong>Team Member</strong>: RUTANANA ARNOLD</li>
                   <li><strong>Team Name</strong>: BSE23-23</li>
                   <li><strong>Project Duration</strong>: 2022 - 2023</li>
-                  <!-- <li>
-                    <strong>Project URL</strong>:
-                    <a href="#">www.example.com</a>
-                  </li> -->
                   <li>
                 </ul>
-                <p style="text-align: center">
+                <p style="margin-top: 5%;">
                   <strong>Contributions to the project</strong>
                 </p>
                 <ol>
-                  Engaged in the data collection process together with the
+                1.  Engaged in the data collection process together with the
                   team.
                 </ol>
                 <ol>
-                  Researched on the relevance of our project by doing some literature review.
+                2.  Researched on the relevance of our project by doing some literature review.
                 </ol>
                 <ol>
-                  Assisted the team in coming up with a group blog post site.
+                3.  Assisted the team in coming up with a group blog post site.
                 </ol>
                 <ol>
-                  Assisted the team in coming up with the SRS document for our project.
+                4.  Assisted the team in coming up with the SRS document for our project.
                 </ol>
                 <ol>
-                  Data visualization
+                5.  Data visualization
                 </ol>
                 <p style="text-align: center">
                   <strong>Literature review towards our project implementation</strong>
@@ -216,22 +212,6 @@
     <!-- End #main -->
     <!-- End #main -->
 
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>BSE23-23</span></strong>
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-          Designed by <a href="">BSE23-23</a>
-        </div>
-      </div>
-    </footer>
-    <!-- End  Footer -->
 
     <a
       href="#"
