--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   </head>
 
   <body>
+    <script>
+      window.location="your new website link";
+    </script>
     <!-- ======= Mobile nav toggle button ======= -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
