--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <body>
     <script>
-      window.location="your new website link";
+      window.location="https://sites.google.com/view/bse23-23";
     </script>
     <!-- ======= Mobile nav toggle button ======= -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
