--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   </head>
 
   <body>
-    <script>
+    <!-- <script>
       window.location="https://sites.google.com/view/bse23-23";
-    </script>
+    </script> -->
     <!-- ======= Mobile nav toggle button ======= -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
